plugins {
    id 'java-library'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springframework.boot' version '3.5.4'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.boot:spring-boot-dependencies:3.5.4'
    }
    dependencies {
        dependency 'io.github.classgraph:classgraph:4.8.165'
        dependency 'org.apache.commons:commons-csv:1.10.0'
    }
}

dependencies {
    implementation 'io.github.classgraph:classgraph'
    implementation 'org.apache.commons:commons-csv'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'jakarta.annotation:jakarta.annotation-api'
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
